WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216314
[WebRTC] Fix uninitialized fields in FilterAnalyzer::ConsistentFilterDetector, FilterAnalyzer::FilterAnalysisState and InterArrival::TimestampGroup
https://bugs.webkit.org/show_bug.cgi?id=216314
Summary
[WebRTC] Fix uninitialized fields in FilterAnalyzer::ConsistentFilterDetector...
David Kilzer (:ddkilzer)
Reported
2020-09-09 09:45:56 PDT
Fix uninitialized fields in FilterAnalyzer::ConsistentFilterDetector, FilterAnalyzer::FilterAnalysisState and InterArrival::TimestampGroup. This is just a hardening task. Found by clang static analyzer using the optin.cplusplus.UninitializedObject checker.
Attachments
Patch v1
(3.72 KB, patch)
2020-09-09 10:25 PDT
,
David Kilzer (:ddkilzer)
youennf
: review+
Details
Formatted Diff
Diff
Patch for landing
(7.61 KB, patch)
2020-09-09 19:15 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2020-09-09 10:25:23 PDT
Created
attachment 408338
[details]
Patch v1
David Kilzer (:ddkilzer)
Comment 2
2020-09-09 19:15:49 PDT
Created
attachment 408399
[details]
Patch for landing
David Kilzer (:ddkilzer)
Comment 3
2020-09-09 19:16:32 PDT
Comment on
attachment 408399
[details]
Patch for landing Adding cq+ since this patch is identical to "Patch v1" except it includes a local copy of the patch for applying to future upstream merges.
Radar WebKit Bug Importer
Comment 4
2020-09-09 19:17:03 PDT
<
rdar://problem/68611826
>
EWS
Comment 5
2020-09-09 19:51:45 PDT
Committed
r266810
: <
https://trac.webkit.org/changeset/266810
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 408399
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug