Source/ThirdParty/libwebrtc/Source/webrtc/modules/remote_bitrate_estimator/inter_arrival.h
@@ -58,7 +58,8 @@ class InterArrival {
           first_timestamp(0),
           timestamp(0),
           first_arrival_ms(-1),
-          complete_time_ms(-1) {}
+          complete_time_ms(-1),
+          last_system_time_ms(0) {}
 
     bool IsFirstPacket() const { return complete_time_ms == -1; }
 
